# langdon-core

./: pyproject.toml
src/langdon_core/: langdon_core_t.py  langdon_logging.py  langdon_manager  models.py
